# Plaine

./: .gitignore  .travis.yml  CMakeLists.txt  IrrlichtTest4.cbp  LICENSE_MIT  Makefile  Plaine.cbp  PlaneRunner.cbp  README.md  compile_localization.sh  count_lines.sh  license_header  main.cpp  shit  start.sh  super_script.sh  update_localization.sh
CLIENT/: CMakeLists.txt
CLIENT/include/: Explosion.h
CLIENT/include/bodies/: BoxProducer.h  ConeProducer.h
CLIENT/include/gui/screens/: HUDScreen.h  PauseMenuScreen.h
CLIENT/include/patterns/: Crystal.h  Cube.h
CLIENT/include/util/: Randomizer.h  options.h
CLIENT/src/: Audio.cpp  Audio.hpp  Body.cpp  Body.hpp  Chunk.hpp  Client.cpp  Client.hpp  Config.cpp  Config.hpp  DebugDrawer.cpp  DebugDrawer.hpp  EventReceiver.cpp  EventReceiver.h  EventReceiver.hpp  Explosion.cpp  Explosion.hpp  Game.cpp  Game.hpp  Log.cpp  MotionState.cpp  MotionState.hpp  ObjMesh.cpp  ObjMesh.h  ObjMesh.hpp  ObstacleGenerator.cpp  ObstacleGenerator.hpp  Patterns.cpp  Patterns.hpp  Plane.hpp  PlaneControl.cpp  PlaneControl.hpp  PlaneProducer.cpp  PlaneProducer.h  PlaneProducer.hpp  Scoreboard.cpp  World.cpp  World.hpp  main.cpp
CLIENT/src/bodies/: BoxProducer.hpp  ConeProducer.cpp  ConeProducer.hpp  IcosahedronProducer.cpp  IcosahedronProducer.h  IcosahedronProducer.hpp  Icosphere2Producer.cpp  Icosphere2Producer.hpp  TetrahedronProducer.cpp  TetrahedronProducer.hpp
CLIENT/src/gui/: GUI.cpp  GUI.h  GUI.hpp  GUIID.h  GUIID.hpp
CLIENT/src/gui/screens/: ConnectScreen.cpp  ConnectScreen.hpp  ControlSettingsScreen.cpp  ControlSettingsScreen.hpp  GameOverScreen.cpp  GameOverScreen.hpp  HUDScreen.cpp  HUDScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  PauseMenuScreen.cpp  PauseMenuScreen.hpp  ScoreboardScreen.cpp  ScoreboardScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp
CLIENT/src/interfaces/: IBodyProducer.hpp  IGUIScreen.hpp  IObstaclePattern.hpp
CLIENT/src/patterns/: Alley.hpp  Crystal.hpp  Cube.hpp  Tunnel.hpp
CLIENT/src/util/: CGUITTFont.cpp  Cuboid.hpp  NaN.cpp  Randomizer.cpp  Randomizer.hpp  i18n.cpp  math.cpp  options.hpp  other.cpp  other.hpp
SERVER/: CMakeLists.txt  ROADMAP
SERVER/cmake/Modules/: FindASIO.cmake
SERVER/src/: Chunk.hpp  ChunkGenerator.hpp  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  ConsoleInterface.cpp  ConsoleInterface.hpp  Error.hpp  Explosion.cpp  Explosion.hpp  Generator.cpp  Generator.hpp  IBodyFactory.hpp  IPattern.hpp  Lexeme.hpp  Mesh.cpp  Mesh.hpp  ParseError.hpp  Patterns.cpp  Patterns.hpp  Plane.hpp  Server.cpp  Server.hpp  World.cpp  World.hpp  main.cpp
SERVER/src/bodies/: BoxFactory.hpp  ConeFactory.cpp  ConeFactory.hpp  IcosahedronFactory.cpp  IcosahedronFactory.hpp  Icosphere2Factory.cpp  Icosphere2Factory.hpp  PlaneFactory.cpp  PlaneFactory.hpp  TetrahedronFactory.cpp  TetrahedronFactory.hpp
SERVER/src/patterns/: Alley.hpp  Crystal.hpp  Cube.hpp  Tunnel.hpp
SERVER/src/util/: Array3.hpp  Cuboid.hpp  Randomizer.cpp  Vector3.hpp  constants.hpp
cmake/Modules/: FindIrrlicht.cmake
include/: Audio.h  Body.h  CGUITTFont.h  Chunk.h  Config.h  DebugDrawer.h  EventReceiver.h  Explosion.h  GUI.h  Game.h  HUDScreen.h  IBody.h  IBodyProducer.h  IGUIScreen.h  IObstacle.h  IObstaclePattern.h  KinematicMotionState.h  Log.h  MainMenuScreen.h  MotionState.h  ObjMesh.h  ObstacleGenerator.h  ObstaclePatternFactory.h  Patterns.h  PauseMenuScreen.h  Plane.h  PlaneControl.h  PlaneMotionState.h  PlaneProducer.h  Randomizer.h  SceneNodeAnimatorCameraPlayer.h  Scoreboard.h  World.h  features.h  options.h  util.h
include/audio/: AudioChunk.h  AudioDevice.h  AudioFile.h  AudioListener.h  AudioSource.h  AudioStream.h  OpenAL.h  Priority.h
include/bodies/: BoxProducer.h  ConeProducer.h  IcosahedronProducer.h  Icosphere2Producer.h  TetrahedronProducer.h
include/gui/: GUI.h  GUIID.h
include/interfaces/: IBodyProducer.h  IGUIScreen.h  IObstaclePattern.h
include/irrlicht/: irrlicht.h
include/obstacles/: Box.h  Cone.h  Crystal.h  Cube.h  Icosahedron.h  Icosphere2.h  Tetrahedron.h  Torus.h  Tunnel.h
include/patterns/: Alley.h  Crystal.h  Cube.h  Tunnel.h  Valley.h
include/screens/: ControlSettingsScreen.h  GameOverScreen.h  HUDScreen.h  MainMenuScreen.h  PauseMenuScreen.h  ScoreboardScreen.h  SettingsScreen.h
include/util/: Array3.h  Cuboid.h  Edges.h  NaN.h  Randomizer.h  Vector3.h  constants.h  exceptions.h  i18n.h  math.h  options.h  other.h
media/fonts/: FONTS
media/models/: cone.blend  cone.mtl  icosahedron.blend  icosahedron.mtl  icosphere2.blend  icosphere2.mtl  plane.blend  plane.blend1  plane.mtl  tetrahedron.blend  tetrahedron.mtl  torus.blend  torus.mtl
media/textures/: cone.xcf  icosahedron.xcf  icosphere2.xcf  plane.xcf  square.xcf  tetrahedron.xcf
src/: Audio.cpp  Body.cpp  Config.cpp  DebugDrawer.cpp  EventReceiver.cpp  Explosion.cpp  GUI.cpp  Game.cpp  HUDScreen.cpp  KinematicMotionState.cpp  Log.cpp  MainMenuScreen.cpp  MotionState.cpp  ObjMesh.cpp  ObstacleGenerator.cpp  ObstaclePatternFactory.cpp  Patterns.cpp  PauseMenuScreen.cpp  Plane.cpp  PlaneControl.cpp  PlaneMotionState.cpp  PlaneProducer.cpp  Randomizer.cpp  SceneNodeAnimatorCameraPlayer.cpp  Scoreboard.cpp  SettingsScreen.cpp  World.cpp  util.cpp
src/audio/: AudioChunk.cpp  AudioDevice.cpp  AudioFile.cpp  (+4 more)
(+44 files in other folders)
